# PrimeGamingCalendar

./: README.md  main.py  pyproject.toml  research.sh
prime_gaming_calendar/: calendar.py  scraper.py  views.py
prime_gaming_calendar/templates/: base.html  index.html
