[tool.poetry]
name = "prime_gaming_calendar"
version = "1.0.0"
description = "Make good use of your Amazon Prime subscription."
authors = ["Kyle Williams <kyle.anthony.williams2@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
icalendar = "^4.0.7"
requests = "^2.26.0"
Flask = "^2.0.1"
selectolax = "^0.3.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
